--- a/docs/modules/ROOT/pages/reference/extensions/langchain4j-chat.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/langchain4j-chat.adoc
@@ -4,17 +4,17 @@
 = langChain4j Chat
 :linkattrs:
 :cq-artifact-id: camel-quarkus-langchain4j-chat
-:cq-native-supported: false
-:cq-status: Preview
-:cq-status-deprecation: Preview
+:cq-native-supported: true
+:cq-status: Experimental
+:cq-status-deprecation: Experimental
 :cq-description: LangChain4j Chat component
 :cq-deprecated: false
 :cq-jvm-since: 3.11.0
-:cq-native-since: n/a
+:cq-native-since: 3.12.0
 
 ifeval::[{doc-show-badges} == true]
 [.badges]
-[.badge-key]##JVM since##[.badge-supported]##3.11.0## [.badge-key]##Native##[.badge-unsupported]##unsupported##
+[.badge-key]##JVM since##[.badge-supported]##3.11.0## [.badge-key]##Native since##[.badge-supported]##3.12.0##
 endif::[]
 
 LangChain4j Chat component
@@ -28,6 +28,10 @@ Please refer to the above link for usage and configuration details.
 
 [id="extensions-langchain4j-chat-maven-coordinates"]
 == Maven coordinates
+
+https://{link-quarkus-code-generator}/?extension-search=camel-quarkus-langchain4j-chat[Create a new project with this extension on {link-quarkus-code-generator}, window="_blank"]
+
+Or add the coordinates to your existing project:
 
 [source,xml]
 ----
