--- a/docs/modules/ROOT/pages/reference/extensions/elasticsearch-rest-client.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/elasticsearch-rest-client.adoc
@@ -4,17 +4,17 @@
 = Elasticsearch Low level Rest Client
 :linkattrs:
 :cq-artifact-id: camel-quarkus-elasticsearch-rest-client
-:cq-native-supported: false
-:cq-status: Preview
-:cq-status-deprecation: Preview
+:cq-native-supported: true
+:cq-status: Stable
+:cq-status-deprecation: Stable
 :cq-description: Perform queries and other operations on Elasticsearch or OpenSearch (uses low-level client).
 :cq-deprecated: false
 :cq-jvm-since: 3.8.0
-:cq-native-since: n/a
+:cq-native-since: 3.12.0
 
 ifeval::[{doc-show-badges} == true]
 [.badges]
-[.badge-key]##JVM since##[.badge-supported]##3.8.0## [.badge-key]##Native##[.badge-unsupported]##unsupported##
+[.badge-key]##JVM since##[.badge-supported]##3.8.0## [.badge-key]##Native since##[.badge-supported]##3.12.0##
 endif::[]
 
 Perform queries and other operations on Elasticsearch or OpenSearch (uses low-level client).
@@ -28,6 +28,10 @@ Please refer to the above link for usage and configuration details.
 
 [id="extensions-elasticsearch-rest-client-maven-coordinates"]
 == Maven coordinates
+
+https://{link-quarkus-code-generator}/?extension-search=camel-quarkus-elasticsearch-rest-client[Create a new project with this extension on {link-quarkus-code-generator}, window="_blank"]
+
+Or add the coordinates to your existing project:
 
 [source,xml]
 ----
