Add default value of modePackage in camel-quarkus-rest-openapi

--- a/docs/modules/ROOT/pages/reference/extensions/rest-openapi.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/rest-openapi.adoc
@@ -146,7 +146,7 @@ If `true`, Camel Quarkus OpenAPI code generation is run for .json files discover
 
 The package to use for generated model classes.
 | `string`
-| required icon:exclamation-circle[title=Configuration property is required]
+| `org.apache.camel.quarkus`
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.openapi.codegen.models]]`link:#quarkus.camel.openapi.codegen.models[quarkus.camel.openapi.codegen.models]`
 
