--- a/docs/modules/ROOT/pages/user-guide/command-mode.adoc
+++ b/docs/modules/ROOT/pages/user-guide/command-mode.adoc
@@ -167,13 +167,8 @@ GraalVM with `native-image` command installed and `GRAALVM_HOME` environment var
 
 [source,shell]
 ----
-$ export GRAALVM_HOME=...
-$ mvn clean package -Pnative
-...
-$ ls -lh target
-...
--rwxr-xr-x. 1 ppalaga ppalaga  33M Jul 15 11:48 command-mode-runner
-...
+export GRAALVM_HOME=...
+mvn clean package -Pnative
 ----
 
 The basic command line application compiled into a Linux native
