--- a/extensions/jfr/runtime/src/main/doc/usage.adoc
+++ b/extensions/jfr/runtime/src/main/doc/usage.adoc
@@ -13,14 +13,14 @@ In JVM mode the application runnable JAR can be executed as follows.
 
 [source,shell]
 ----
-$ java -XX:+FlightRecorder -XX:StartFlightRecording=filename=recording.jfr -jar quarkus-run.jar
+java -XX:+FlightRecorder -XX:StartFlightRecording=filename=recording.jfr -jar quarkus-run.jar
 ----
 
 In native mode, the native executable can be executed as follows.
 
 [source,shell]
 ----
-$ ./my-application-runner -XX:+FlightRecorder -XX:StartFlightRecording=filename=recording.jfr
+./my-application-runner -XX:+FlightRecorder -XX:StartFlightRecording=filename=recording.jfr
 ----
 
 === Flight recording in native mode
