--- a/docs/modules/ROOT/pages/contributor-guide/index.adoc
+++ b/docs/modules/ROOT/pages/contributor-guide/index.adoc
@@ -21,29 +21,29 @@ Checkout the code
 
 [source,shell]
 ----
-$ git clone https://github.com/apache/camel-quarkus.git
-$ cd camel-quarkus
+git clone https://github.com/apache/camel-quarkus.git
+cd camel-quarkus
 ----
 
 A fast build without tests and various checks:
 
 [source,shell]
 ----
-$ mvn clean install -Dquickly
+mvn clean install -Dquickly
 ----
 
 A build with integration tests in the JVM mode only:
 
 [source,shell]
 ----
-$ mvn clean install
+mvn clean install
 ----
 
 A build with integration tests in both the JVM mode and the native mode:
 
 [source,shell]
 ----
-$ mvn clean install -Pnative
+mvn clean install -Pnative
 ----
 
 TIP: You may want to install and use https://github.com/mvndaemon/mvnd[`mvnd` - the Maven Daemon] for faster builds.
