--- a/docs/modules/ROOT/pages/reference/extensions/jfr.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/jfr.adoc
@@ -62,14 +62,14 @@ In JVM mode the application runnable JAR can be executed as follows.
 
 [source,shell]
 ----
-$ java -XX:+FlightRecorder -XX:StartFlightRecording=filename=recording.jfr -jar quarkus-run.jar
+java -XX:+FlightRecorder -XX:StartFlightRecording=filename=recording.jfr -jar quarkus-run.jar
 ----
 
 In native mode, the native executable can be executed as follows.
 
 [source,shell]
 ----
-$ ./my-application-runner -XX:+FlightRecorder -XX:StartFlightRecording=filename=recording.jfr
+./my-application-runner -XX:+FlightRecorder -XX:StartFlightRecording=filename=recording.jfr
 ----
 
 [id="extensions-jfr-usage-flight-recording-in-native-mode"]
