--- a/docs/modules/ROOT/pages/user-guide/first-steps.adoc
+++ b/docs/modules/ROOT/pages/user-guide/first-steps.adoc
@@ -33,12 +33,12 @@ Quarkus provides a Maven plugin that enables you to quickly bootstrap projects. 
 
 [source,shell,subs="attributes"]
 ----
-$ mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \
+mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \
     -DprojectGroupId=org.acme \
     -DprojectArtifactId=getting-started \
     -Dextensions=camel-quarkus-log,camel-quarkus-timer
 
-$ cd getting-started
+cd getting-started
 ----
 
 NOTE: Windows users should omit the `\` if using `cmd`. When using `Powershell`, wrap the `-D` parameters in double quotes.
@@ -80,15 +80,15 @@ The main branch is always aligned with the latest Camel Quarkus release.
 +
 [source,shell]
 ----
-$ git clone https://github.com/apache/camel-quarkus-examples.git
+git clone https://github.com/apache/camel-quarkus-examples.git
 ----
 
 2. Copy the `rest-json` example out of the source tree:
 +
 [source,shell]
 ----
-$ cp -r camel-quarkus-examples/rest-json .
-$ cd rest-json
+cp -r camel-quarkus-examples/rest-json .
+cd rest-json
 ----
 
 3. Open the `pom.xml` file in your IDE. Change the project `groupId`, `artifactId` & `version` as necessary.
@@ -124,7 +124,7 @@ The application is configured by properties defined within `src/main/resources/a
 
 [source,shell]
 ----
-$ mvn clean compile quarkus:dev
+mvn clean compile quarkus:dev
 ----
 
 This command compiles the project, starts your application and lets the Quarkus tooling watch for changes in your
@@ -146,7 +146,7 @@ The JVM mode tests are run by `maven-surefire-plugin` in the `test` Maven phase:
 
 [source,shell]
 ----
-$ mvn clean test
+mvn clean test
 ----
 
 This should take about 15 seconds.
@@ -156,7 +156,7 @@ activate the profile that runs them:
 
 [source,shell]
 ----
-$ mvn clean verify -Pnative
+mvn clean verify -Pnative
 ----
 
 This takes about 2.5 minutes (once you have all dependencies cached).
@@ -169,8 +169,8 @@ This takes about 2.5 minutes (once you have all dependencies cached).
 
 [source,shell]
 ----
-$ mvn clean package
-$ ls -lh target/quarkus-app
+mvn clean package
+ls -lh target/quarkus-app
 ...
 -rw-r--r--. 1 ppalaga ppalaga 238K Oct 11 18:55  quarkus-run.jar
 ...
@@ -180,7 +180,7 @@ You can run it as follows:
 
 [source,shell]
 ----
-$ java -jar target/quarkus-app/quarkus-run.jar
+java -jar target/quarkus-app/quarkus-run.jar
 ...
 [io.quarkus] (main) Quarkus started in 1.163s. Listening on: http://[::]:8080
 ----
@@ -195,8 +195,8 @@ To prepare a native executable using GraalVM, run the following command:
 
 [source,shell]
 ----
-$ mvn clean package -Pnative
-$ ls -lh target
+mvn clean package -Pnative
+ls -lh target
 ...
 -rwxr-xr-x. 1 ppalaga ppalaga  46M Oct 11 18:57  my-app-0.0.1-SNAPSHOT-runner
 ...
@@ -207,7 +207,7 @@ it can be run directly:
 
 [source,shell]
 ----
-$ ./target/*-runner
+./target/*-runner
 ...
 [io.quarkus] (main) Quarkus started in 0.013s. Listening on: http://[::]:8080
 ...
@@ -217,7 +217,7 @@ Check how fast it started and check how little memory it consumes:
 
 [source,shell]
 ----
-$ ps -o rss,command -p $(pgrep my-app)
+ps -o rss,command -p $(pgrep my-app)
   RSS COMMAND
 34916 ./target/my-app-0.0.1-SNAPSHOT-runner
 ----
