--- a/docs/modules/ROOT/pages/reference/extensions/langchain4j-embeddings.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/langchain4j-embeddings.adoc
@@ -39,3 +39,26 @@ Please refer to the above link for usage and configuration details.
 ifeval::[{doc-show-user-guide-link} == true]
 Check the xref:user-guide/index.adoc[User guide] for more information about writing Camel Quarkus applications.
 endif::[]
+
+[id="extensions-langchain4j-embeddings-quarkus-langchain4j-bom"]
+== Ensure Quarkus LangChain4j dependencies version alignment with the Bom
+
+In order to ensure alignment across all Quarkus and LangChain4j related dependencies, it is recommended to import the Quarkus LangChain4j bom as below:
+[source,xml]
+----
+<dependencyManagement>
+  <dependencies>
+    <dependency>
+      <groupId>io.quarkiverse.langchain4j</groupId>
+      <artifactId>quarkus-langchain4j-bom</artifactId>
+      <version>${insert your version here}</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
+  </dependencies>
+  ...
+</dependencyManagement>
+----
+
+Note that the import order is paramount when using maven `dependencyManagement`.
+As such, one might need to import the `quarkus-langchain4j-bom` before other related Camel and Quarkus boms.
